--- a/public/css/app.css
+++ b/public/css/app.css
@@ -394,12 +394,32 @@ video {
   --tw-backdrop-saturate:  ;
   --tw-backdrop-sepia:  ;
 }body{
+  position: relative;
   font-size: 1rem;
   line-height: 1.5rem;
   --tw-text-opacity: 1;
   color: rgb(255 255 255 / var(--tw-text-opacity));
         font-family: 'Noto Sans', sans-serif;
-}.fixed{
+        min-height: 100vh;
+        padding-bottom: var(--footer-height);
+}footer{
+  position: absolute;
+  bottom: 0px;
+  display: flex;
+  width: 100%;
+  flex-direction: column;
+  justify-content: center;
+  font-size: 0.75rem;
+  line-height: 1rem;
+}@media (min-width: 1024px){footer{
+    font-size: 0.875rem;
+    line-height: 1.25rem;
+  }
+}footer {
+        height: var(--footer-height);
+    }.viner {
+        font-family: Viner;
+    }.fixed{
   position: fixed;
 }.relative{
   position: relative;
@@ -428,6 +448,8 @@ video {
   margin-left: 3rem;
 }.-mt-px{
   margin-top: -1px;
+}.inline-block{
+  display: inline-block;
 }.flex{
   display: flex;
 }.grid{
@@ -442,32 +464,36 @@ video {
   height: 4rem;
 }.min-h-screen{
   min-height: 100vh;
+}.w-full{
+  width: 100%;
 }.w-5{
   width: 1.25rem;
 }.w-8{
   width: 2rem;
 }.w-auto{
   width: auto;
-}.w-full{
-  width: 100%;
-}.max-w-6xl{
-  max-width: 72rem;
 }.max-w-7xl{
   max-width: 80rem;
+}.max-w-6xl{
+  max-width: 72rem;
+}.max-w-\[30\%\]{
+  max-width: 30%;
 }.grid-cols-1{
   grid-template-columns: repeat(1, minmax(0, 1fr));
 }.flex-col{
   flex-direction: column;
+}.flex-wrap{
+  flex-wrap: wrap;
 }.items-center{
   align-items: center;
 }.justify-center{
   justify-content: center;
 }.justify-between{
   justify-content: space-between;
-}.gap-2{
-  gap: 0.5rem;
 }.gap-4{
   gap: 1rem;
+}.gap-6{
+  gap: 1.5rem;
 }.overflow-hidden{
   overflow: hidden;
 }.overflow-ellipsis{
@@ -476,14 +502,32 @@ video {
   white-space: nowrap;
 }.rounded-lg{
   border-radius: 0.5rem;
+}.rounded{
+  border-radius: 0.25rem;
+}.border{
+  border-width: 1px;
 }.border-t{
   border-top-width: 1px;
+}.border-b{
+  border-bottom-width: 1px;
 }.border-gray-200{
   --tw-border-opacity: 1;
   border-color: rgb(229 231 235 / var(--tw-border-opacity));
+}.border-gray-400{
+  --tw-border-opacity: 1;
+  border-color: rgb(156 163 175 / var(--tw-border-opacity));
+}.border-primary{
+  --tw-border-opacity: 1;
+  border-color: rgb(255 192 0 / var(--tw-border-opacity));
+}.border-gray-600{
+  --tw-border-opacity: 1;
+  border-color: rgb(75 85 99 / var(--tw-border-opacity));
 }.bg-black{
   --tw-bg-opacity: 1;
   background-color: rgb(0 0 0 / var(--tw-bg-opacity));
+}.bg-gray-800{
+  --tw-bg-opacity: 1;
+  background-color: rgb(31 41 55 / var(--tw-bg-opacity));
 }.bg-white{
   --tw-bg-opacity: 1;
   background-color: rgb(255 255 255 / var(--tw-bg-opacity));
@@ -493,22 +537,38 @@ video {
 }.bg-gray-700{
   --tw-bg-opacity: 1;
   background-color: rgb(55 65 81 / var(--tw-bg-opacity));
+}.bg-primary{
+  --tw-bg-opacity: 1;
+  background-color: rgb(255 192 0 / var(--tw-bg-opacity));
 }.p-6{
   padding: 1.5rem;
+}.py-6{
+  padding-top: 1.5rem;
+  padding-bottom: 1.5rem;
+}.px-9{
+  padding-left: 2.25rem;
+  padding-right: 2.25rem;
 }.py-4{
   padding-top: 1rem;
   padding-bottom: 1rem;
 }.px-6{
   padding-left: 1.5rem;
   padding-right: 1.5rem;
-}.px-9{
-  padding-left: 2.25rem;
-  padding-right: 2.25rem;
 }.py-2{
   padding-top: 0.5rem;
   padding-bottom: 0.5rem;
+}.px-4{
+  padding-left: 1rem;
+  padding-right: 1rem;
+}.py-8{
+  padding-top: 2rem;
+  padding-bottom: 2rem;
 }.pt-8{
   padding-top: 2rem;
+}.pt-6{
+  padding-top: 1.5rem;
+}.pt-2{
+  padding-top: 0.5rem;
 }.text-center{
   text-align: center;
 }.text-sm{
@@ -517,18 +577,21 @@ video {
 }.text-lg{
   font-size: 1.125rem;
   line-height: 1.75rem;
-}.text-2xl{
-  font-size: 1.5rem;
-  line-height: 2rem;
 }.text-3xl{
   font-size: 1.875rem;
   line-height: 2.25rem;
+}.text-xl{
+  font-size: 1.25rem;
+  line-height: 1.75rem;
 }.text-4xl{
   font-size: 2.25rem;
   line-height: 2.5rem;
-}.text-6xl{
-  font-size: 3.75rem;
+}.text-5xl{
+  font-size: 3rem;
   line-height: 1;
+}.text-2xl{
+  font-size: 1.5rem;
+  line-height: 2rem;
 }.font-semibold{
   font-weight: 600;
 }.leading-7{
@@ -536,6 +599,9 @@ video {
 }.text-white{
   --tw-text-opacity: 1;
   color: rgb(255 255 255 / var(--tw-text-opacity));
+}.text-primary{
+  --tw-text-opacity: 1;
+  color: rgb(255 192 0 / var(--tw-text-opacity));
 }.text-gray-200{
   --tw-text-opacity: 1;
   color: rgb(229 231 235 / var(--tw-text-opacity));
@@ -557,9 +623,9 @@ video {
 }.text-gray-900{
   --tw-text-opacity: 1;
   color: rgb(17 24 39 / var(--tw-text-opacity));
-}.text-primary{
+}.text-secondary{
   --tw-text-opacity: 1;
-  color: rgb(255 192 0 / var(--tw-text-opacity));
+  color: rgb(0 242 222 / var(--tw-text-opacity));
 }.underline{
   -webkit-text-decoration-line: underline;
           text-decoration-line: underline;
@@ -570,6 +636,17 @@ video {
   --tw-shadow: 0 1px 3px 0 rgb(0 0 0 / 0.1), 0 1px 2px -1px rgb(0 0 0 / 0.1);
   --tw-shadow-colored: 0 1px 3px 0 var(--tw-shadow-color), 0 1px 2px -1px var(--tw-shadow-color);
   box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
+}@font-face{
+    font-family: 'Viner';
+    src: url('/fonts/VINERITC.TTF');
+}:root {
+    --footer-height: 150px;
+}.hover\:bg-white:hover{
+  --tw-bg-opacity: 1;
+  background-color: rgb(255 255 255 / var(--tw-bg-opacity));
+}.hover\:text-black:hover{
+  --tw-text-opacity: 1;
+  color: rgb(0 0 0 / var(--tw-text-opacity));
 }@media (prefers-color-scheme: dark){.dark\:border-gray-700{
     --tw-border-opacity: 1;
     border-color: rgb(55 65 81 / var(--tw-border-opacity));
@@ -622,8 +699,37 @@ video {
   }.md\:border-l{
     border-left-width: 1px;
   }
-}@media (min-width: 1024px){.lg\:px-8{
+}@media (min-width: 1024px){.lg\:max-w-\[40\%\]{
+    max-width: 40%;
+  }.lg\:flex-row{
+    flex-direction: row;
+  }.lg\:flex-nowrap{
+    flex-wrap: nowrap;
+  }.lg\:px-8{
     padding-left: 2rem;
     padding-right: 2rem;
+  }.lg\:py-0{
+    padding-top: 0px;
+    padding-bottom: 0px;
+  }.lg\:pt-0{
+    padding-top: 0px;
+  }.lg\:text-3xl{
+    font-size: 1.875rem;
+    line-height: 2.25rem;
+  }.lg\:text-6xl{
+    font-size: 3.75rem;
+    line-height: 1;
+  }.lg\:text-xl{
+    font-size: 1.25rem;
+    line-height: 1.75rem;
+  }
+}@media (min-width: 1280px){.xl\:max-w-\[30\%\]{
+    max-width: 30%;
+  }.xl\:text-7xl{
+    font-size: 4.5rem;
+    line-height: 1;
+  }.xl\:text-2xl{
+    font-size: 1.5rem;
+    line-height: 2rem;
   }
 }
