--- a/resources/views/layout.antlers.html
+++ b/resources/views/layout.antlers.html
@@ -54,12 +54,6 @@
             {{ template_content }}
         </main>
 
-        <footer class="bg-gray-800 py-6">
-            <div class="w-full max-w-7xl mx-auto px-9">
-                <div>Copyright © {{ date format="Y" }} Greg Keller for SD68 Trustee.</div>
-                <div>Website by <a href="https://portfolio.mattbeckett.me" class="text-primary">Matt Beckett</a></div>
-                <div>Authorized By Greg Keller Financial Agent (250) 713-850</div>
-            </div>
-        </footer>
+        {{ partial:partials/footer }}
     </body>
 </html>
