--- a/resources/views/layout.antlers.html
+++ b/resources/views/layout.antlers.html
@@ -41,7 +41,7 @@
         <meta name="theme-color" content="#ffffff">
         -->
 
-        <!-- <script defer src="/js/alpinejs.min.js"></script> -->
+        <script defer src="/js/alpinejs.min.js"></script>
 
         <link href="{{ mix src="/css/app.css" }}" rel="stylesheet">
         <script src="https://kit.fontawesome.com/e7d186f560.js" crossorigin="anonymous"></script>
