--- a/public/css/app.css
+++ b/public/css/app.css
@@ -1,4 +1,4 @@
-@import url(https://fonts.googleapis.com/css2?family=League+Spartan:wght@400;600&family=Noto+Sans&display=swap);
+@import url(https://fonts.googleapis.com/css2?family=League+Spartan:wght@400;600&family=Noto+Sans:wght@400;600&display=swap);
 /*
 ! tailwindcss v3.1.6 | MIT License | https://tailwindcss.com
 *//*
@@ -258,6 +258,17 @@ video {
 }h4{
   font-size: 1.125rem;
   line-height: 1.75rem;
+}input[type="text"], 
+    input[type="email"], 
+    textarea{
+  width: 100%;
+  border-radius: 0.25rem;
+  padding-left: 1rem;
+  padding-right: 1rem;
+  padding-top: 0.5rem;
+  padding-bottom: 0.5rem;
+  --tw-text-opacity: 1;
+  color: rgb(75 85 99 / var(--tw-text-opacity));
 }*, ::before, ::after{
   --tw-border-spacing-x: 0;
   --tw-border-spacing-y: 0;
@@ -421,19 +432,23 @@ video {
         font-family: Viner;
     }.wysiwyg p {
         padding-bottom: 1rem;
-    }.fixed{
+    }.wysiwyg ol{
+  list-style-position: outside;
+  list-style-type: decimal;
+  padding-left: 3rem;
+}.wysiwyg strong{
+  font-weight: 700;
+}a{
+  --tw-text-opacity: 1;
+  color: rgb(255 192 0 / var(--tw-text-opacity));
+}.fixed{
   position: fixed;
 }.relative{
   position: relative;
-}.sticky{
-  position: -webkit-sticky;
-  position: sticky;
 }.top-0{
   top: 0px;
 }.right-0{
   right: 0px;
-}.top-2{
-  top: 0.5rem;
 }.mx-auto{
   margin-left: auto;
   margin-right: auto;
@@ -483,10 +498,8 @@ video {
   max-width: 72rem;
 }.max-w-7xl{
   max-width: 80rem;
-}.max-w-\[30\%\]{
-  max-width: 30%;
-}.max-w-\[40\%\]{
-  max-width: 40%;
+}.max-w-2xl{
+  max-width: 42rem;
 }.grid-cols-1{
   grid-template-columns: repeat(1, minmax(0, 1fr));
 }.flex-col{
@@ -549,8 +562,18 @@ video {
 }.bg-primary{
   --tw-bg-opacity: 1;
   background-color: rgb(255 192 0 / var(--tw-bg-opacity));
+}.bg-green-300{
+  --tw-bg-opacity: 1;
+  background-color: rgb(134 239 172 / var(--tw-bg-opacity));
+}.bg-red-300{
+  --tw-bg-opacity: 1;
+  background-color: rgb(252 165 165 / var(--tw-bg-opacity));
 }.p-6{
   padding: 1.5rem;
+}.p-2{
+  padding: 0.5rem;
+}.p-1{
+  padding: 0.25rem;
 }.py-4{
   padding-top: 1rem;
   padding-bottom: 1rem;
@@ -572,12 +595,17 @@ video {
 }.py-8{
   padding-top: 2rem;
   padding-bottom: 2rem;
+}.px-8{
+  padding-left: 2rem;
+  padding-right: 2rem;
 }.pt-8{
   padding-top: 2rem;
 }.pt-6{
   padding-top: 1.5rem;
 }.pt-2{
   padding-top: 0.5rem;
+}.pb-2{
+  padding-bottom: 0.5rem;
 }.text-center{
   text-align: center;
 }.text-sm{
@@ -598,8 +626,16 @@ video {
 }.text-5xl{
   font-size: 3rem;
   line-height: 1;
+}.text-xs{
+  font-size: 0.75rem;
+  line-height: 1rem;
+}.text-2xl{
+  font-size: 1.5rem;
+  line-height: 2rem;
 }.font-semibold{
   font-weight: 600;
+}.font-bold{
+  font-weight: 700;
 }.leading-7{
   line-height: 1.75rem;
 }.text-white{
@@ -632,6 +668,12 @@ video {
 }.text-secondary{
   --tw-text-opacity: 1;
   color: rgb(0 242 222 / var(--tw-text-opacity));
+}.text-red-500{
+  --tw-text-opacity: 1;
+  color: rgb(239 68 68 / var(--tw-text-opacity));
+}.text-black{
+  --tw-text-opacity: 1;
+  color: rgb(0 0 0 / var(--tw-text-opacity));
 }.underline{
   -webkit-text-decoration-line: underline;
           text-decoration-line: underline;
