--- a/resources/css/components/typography.css
+++ b/resources/css/components/typography.css
@@ -1,4 +1,4 @@
-@import url('https://fonts.googleapis.com/css2?family=League+Spartan:wght@400;600&family=Noto+Sans&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=League+Spartan:wght@400;600&family=Noto+Sans:wght@400;600&display=swap');
 
 @font-face{
     font-family: 'Viner';
@@ -29,5 +29,17 @@
 
     .wysiwyg p {
         padding-bottom: 1rem;
+    }
+
+    .wysiwyg ol {
+        @apply list-decimal list-outside pl-12;
+    }
+
+    .wysiwyg strong {
+        @apply font-bold;
+    }
+
+    a {
+        @apply text-primary;
     }
 }
