--- a/resources/views/templates/pages/meet-greg.antlers.html
+++ b/resources/views/templates/pages/meet-greg.antlers.html
@@ -2,7 +2,7 @@
 <div class="max-w-7xl mx-auto px-9 py-6">
     <div class="flex flex-col lg:flex-row gap-6">
         <div class="w-full relative lg:max-w-[40%]">
-            <img src="{{ images.0.url }}" alt="Greg Keller" class="w-full lg:sticky lg:top-2">
+            <img src="{{ images.0.url }}" alt="Greg Keller" class="w-full lg:sticky lg:top-2" style="clip-path: polygon(0% 0%, 80% 0%, 100% 20%, 100% 100%, 20% 100%, 0% 80%)">
         </div>
 
         <div class="w-full">
