favicons and seo stuff

--- a/resources/views/layout.antlers.html
+++ b/resources/views/layout.antlers.html
@@ -33,13 +33,11 @@
             <meta property="twitter:image" content="{{ global.seo_image.url }}">
         {{ /if }}
 
-        <!--
-        <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
-        <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
-        <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
-        <meta name="msapplication-TileColor" content="#da532c">
-        <meta name="theme-color" content="#ffffff">
-        -->
+        <link rel="apple-touch-icon" sizes="180x180" href="/images/apple-touch-icon.png">
+        <link rel="icon" type="image/png" sizes="32x32" href="/images/favicon-32x32.png">
+        <link rel="icon" type="image/png" sizes="16x16" href="/images/favicon-16x16.png">
+        <meta name="msapplication-TileColor" content="#ffc000">
+        <meta name="theme-color" content="#ffc000">
 
         <script defer src="/js/alpinejs.min.js"></script>
 
