add facebook domain verification

--- a/resources/views/layout.antlers.html
+++ b/resources/views/layout.antlers.html
@@ -44,6 +44,7 @@
         <link href="{{ mix src="/css/app.css" }}" rel="stylesheet">
         <script src="https://kit.fontawesome.com/e7d186f560.js" crossorigin="anonymous"></script>
         
+        {{ global.head_scripts }}
     </head>
     <body class="bg-black text-white">
         {{ partial:partials/header }}
