link youtube channel

--- a/resources/views/partials/header.antlers.html
+++ b/resources/views/partials/header.antlers.html
@@ -17,8 +17,12 @@
                 <i class="fa-brands fa-facebook-square"></i>
             </a>
 
-            <a href="https://www.instagram.com/gregbkeller/" aria-title="Facebook" class="text-3xl text-white">
+            <a href="https://www.instagram.com/gregbkeller/" aria-title="Instagram" class="text-3xl text-white">
                 <i class="fa-brands fa-instagram"></i>
+            </a>
+
+            <a href="https://www.youtube.com/channel/UCSR9R5aA2zgsUbQgMfC9tGw" aria-title="Youtube" class="text-3xl text-white">
+                <i class="fa-brands fa-youtube"></i>
             </a>
         </div>
     </div>
