--- a/resources/views/templates/pages/home.antlers.html
+++ b/resources/views/templates/pages/home.antlers.html
@@ -26,8 +26,8 @@
         <div class="w-full">
             <h2 class="text-secondary text-3xl">{{ title }}</h2>
 
-            <div class="wysiwyg pt-2">
-                {{ content }}
+            <div class="pt-2">
+                {{ partial:partials/wysiwyg :content="content" }}
             </div>
         </div>
     </div>
