--- a/resources/views/templates/pages/platform.antlers.html
+++ b/resources/views/templates/pages/platform.antlers.html
@@ -13,9 +13,7 @@
                     <h2 class="text-secondary text-3xl lg:text-6xl">{{ title }}</h2>
                 {{ /if }}
         
-                <div class="wysiwyg">
-                    {{ content }}
-                </div>
+                {{ partial:partials/wysiwyg :content="content" }}
             </div>
         {{ /sections.0 }}
         
@@ -25,9 +23,7 @@
                     <h2 class="text-primary" class="text-2xl">{{ title }}</h2>
                 {{ /if }}
         
-                <div class="wysiwyg">
-                    {{ content }}
-                </div>
+                {{ partial:partials/wysiwyg :content="content" }}
             </div>
         {{ /sections }}
         </div>
